# TimeTracker

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: ci.yml
src/: auth.rs  constants.rs  handlers.rs  main.rs  pages.rs  utils.rs
static/: site.webmanifest
static/js/: index.js  recents.js  summary.js  utils.js
templates/: explanations.html  footer.html  header.html  index.html  index.html.tera  navbar.html  recents.html  summary.html  summary.html.tera
