[package]
name = "timetracker"
version = "1.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
askama = "0.14"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
mime_guess = "2.0"
num = "0.4"
rust-embed = "8.7"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
